# frost-cli

./: .gitignore  Cargo.toml  README.md
examples/: frost_api_example.rs
results/: frost_keys.json  signature.json
src/: keygen.rs  lib.rs  main.rs  sign.rs  types.rs  verify.rs
tests/: test.rs
