[package]
name = "frost_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
frost-dalek = { git = "https://github.com/isislovecruft/frost-dalek.git" }
rand = { version = "0.7"} 
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "frost_api_example"
path = "examples/frost_api_example.rs"