[package]
name = "frost_cli"
version = "0.1.0"
edition = "2021"
authors = ["davidcuellard https://github.com/davidcuellard"]
repository = "https://github.com/davidcuellard/frost-dalek-cli"
documentation = "https://docs.rs/frost-dalek-cli"

[dependencies]
frost-dalek = { git = "https://github.com/davidcuellard/frost-dalek.git" }
rand = { version = "0.7" } 
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curve25519-dalek = { version = "3", default-features = false }

[lib]
name = "frost_cli"
path = "src/lib.rs"

[[bin]]
name = "frost-cli"
path = "src/main.rs"

[[example]]
name = "frost_api_example"
path = "examples/frost_api_example.rs"